# rust-backend-manual

./: Cargo.toml  index.html
Millie/: Create User.bru  bruno.json  get User.bru
src/: main.rs
