[package]
name = "backend-millie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
mongodb = "2.8.2"
bson = "2.0"
serde = "1.0.201"
serde_json = "1.0.117"
futures = "0.3"
